avancement correction rapport suite aux remarques M.Lieber

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -3,8 +3,9 @@
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage[latin1]{inputenc} % package caracteres francais
-\usepackage[T1]{fontenc}      % package caracteres francai
-\usepackage[francais]{babel}  % package caracteres francai
+\usepackage[T1]{fontenc}      % package caracteres francais
+\usepackage[francais]{babel}  % package caracteres francais
+\usepackage{url}
 \usepackage{vmargin}
 \setmarginsrb{20mm}{20mm}{20mm}{20mm}{0mm}{0mm}{4mm}{8mm}
 
@@ -150,10 +151,10 @@ Une courte \'etude bibliographique sur la maintenance de base de cas permettra d
 \vspace*{35mm}
 
 
-Le TAL (traitement automatique des langues) est un domaine d'\'{e}tude dont l'objectif est de cr\'{e}er des outils de traitement de la langue pour diverses applications. Il traite de nombreux sujets notamment dans le domaine de la compr\'{e}hension automatique des textes, la traduction automatique, ou encore la correction automatique des fautes orthographiques et grammaticales. C'est pourquoi linguistes et informaticiens collaborent \'{e}troitement sur l'\'{e}tude de la langue et le traitement automatique des donn\'{e}es. Le traitement automatique du langage couvre donc un large panel de disciplines de recherche et se trouve \`{a} l'origine de nombreux travaux. 
+Le TAL (traitement automatique des langues) est un domaine d'\'{e}tudes dont l'objectif est de cr\'{e}er des outils de traitement de la langue pour diverses applications. Il traite de nombreux sujets notamment dans le domaine de la compr\'{e}hension automatique des textes, la traduction automatique, ou encore la correction automatique des fautes orthographiques et grammaticales. C'est pourquoi linguistes et informaticiens collaborent \'{e}troitement sur l'\'{e}tude de la langue et le traitement automatique des donn\'{e}es. Le traitement automatique du langage couvre donc un vaste champs de disciplines de recherche et se trouve \`{a} l'origine de nombreux travaux. 
 \newline
 \newline
-Parmi les premiers travaux, qui remontent aux ann\'{e}es 50 pendant la guerre froide, se trouve la mise au point du premier traducteur automatique. Nomm\'{e} "experience Georgetown-IBM" et d\'{e}velopp\'{e} par l'universit\'{e} de Georgetown en collaboration avec la soci\'{e}t\'{e} IBM, le projet offrait la possibilit\'{e} de traduire du russe vers l'anglais. C'est en 1954 que la premi\`{e}re d\'{e}monstration sur une soixantaine de phrases s'est faite, une vraie prouesse technologique pour l'\'{e}poque. Depuis, le traitement automatique des langues a bien \'{e}volu\'{e} et est devenu un domaine pluridisciplinaire. Il peut allier la linguistique, l'informatique, et m\^{e}me se coupler \`{a} de l'intelligence artificielle pour cr\'{e}er des applications de plus en plus complexes nous permettant de simplifier nos t\^{a}ches quotidiennes. 
+Parmi les premiers travaux, qui remontent aux ann\'{e}es 50 pendant la guerre froide, se trouve la mise au point du premier traducteur automatique. Nomm\'{e} <<\,experience Georgetown-IBM\,>> et d\'{e}velopp\'{e} par l'universit\'{e} de Georgetown en collaboration avec la soci\'{e}t\'{e} IBM, le projet offrait la possibilit\'{e} de traduire du russe vers l'anglais. C'est en 1954 que la premi\`{e}re d\'{e}monstration sur une soixantaine de phrases s'est faite, une vraie prouesse technologique pour l'\'{e}poque. Depuis, le traitement automatique des langues a bien \'{e}volu\'{e} et est devenu un domaine pluridisciplinaire. Il peut allier la linguistique, l'informatique, et m\^{e}me se coupler \`{a} de l'intelligence artificielle pour cr\'{e}er des applications de plus en plus complexes nous permettant de simplifier nos t\^{a}ches quotidiennes. 
 \newline
 
 Un correcteur automatique de la langue est un exemple d'outil utilisant des domaines du traitement automatique des langues. Il utilise des disciplines de recherche vari\'{e}es telles que l'analyse syntaxique, la correction orthographique et d'autres plus sp\'{e}cifiques telles que la d\'{e}limitation de phrase ou la morphologie. Un outil tel que celui-ci est un monstre de conception et de d\'{e}veloppement, et les meilleurs correcteurs automatiques connus \`{a} ce jour ont \'{e}t\'{e} d\'{e}velopp\'{e}s par des entreprises internationales comme Microsoft, Google ou encore Apple. 
@@ -170,10 +171,11 @@ Contrairement aux cas d\'{e}crits pr\'{e}c\'{e}demment, notre sujet consiste \`{
 
 %===== 1ere sous partie ====
 \subsection{Le raisonnement \`{a} partir de cas}
-Le raisonnement \`{a} partir de cas (not\'{e} R\`{a}PC) est un raisonnement qui consiste \`{a} r\'{e}soudre des probl\`{e}mes de la vie quotidienne s'appuyant sur des exp\'{e}riences similaires rencontr\'{e}es par le pass\'{e}. Gr\^{a}ce aux exp\'{e}riences pass\'{e}es d\'{e}j\`{a} r\'{e}solues, nous arrivons \`{a} en inf\'{e}rer une solution qui s'ajoute \`{a} notre exp\'{e}rience. La reproduction de cet exemple un grand nombre de fois nous permettra d'avoir une exp\'{e}rience telle que nous pouvons essayer de d\'{e}duire une solution \`{a} n'importe quel probl\`{e}me ressemblant.
+Le raisonnement \`{a} partir de cas (not\'{e} R\`{a}PC) est un raisonnement qui consiste \`{a} r\'{e}soudre des probl\`{e}mes en s'appuyant sur des exp\'{e}riences similaires rencontr\'{e}es par le pass\'{e}. Gr\^{a}ce aux exp\'{e}riences pass\'{e}es d\'{e}j\`{a} r\'{e}solues, nous arrivons \`{a} en inf\'{e}rer une solution qui s'ajoute \`{a} notre exp\'{e}rience. La reproduction de cet exemple un grand nombre de fois nous permettra d'avoir une exp\'{e}rience telle que nous pouvons essayer d'inf\'{e}rer une solution \`{a} des
+probl\`{e}mes similaires.
 \newline
 \newline
-Il y a deux principales \'{e}tapes dans ce raisonnement. Premi\`{e}rement, il y a ce qu'on appellera la "rem\'{e}moration", qui est le rapprochement entre notre probl\`{e}me actuel (que nous appellerons probl\`{e}me cible) et un probl\`{e}me qui a d\'{e}j\`{a} \'{e}t\'{e} r\'{e}solu dans le pass\'{e} (qu'on nommera probl\`{e}me source). La seconde \'{e}tape s'appelle "l'adaptation". Ce principe permet d'obtenir une solution de notre probl\`{e}me source en modifiant la solution du probl\`{e}me cible.
+Il y a deux principales \'{e}tapes dans ce raisonnement. Premi\`{e}rement, il y a ce qu'on appellera la <<\,rem\'{e}moration\,>>, qui est le rapprochement entre notre probl\`{e}me actuel (que nous appellerons probl\`{e}me cible) et un probl\`{e}me qui a d\'{e}j\`{a} \'{e}t\'{e} r\'{e}solu dans le pass\'{e} (qu'on nommera probl\`{e}me source). La deuxi\`{e}me \'{e}tape s'appelle <<\,l'adaptation\,>>. Ce principe permet d'obtenir une solution de notre probl\`{e}me source en modifiant la solution du probl\`{e}me cible.
 \newline
 \newline
 %==== image ====
@@ -185,9 +187,9 @@ Nous voyons donc qu'il est possible de r\'{e}soudre des probl\`{e}mes gr\^ace au
 \newline
 \newline
 Voici un exemple de r\'{e}solution de probl\`{e}me gr\^ace au raisonnement \`{a} partir de cas : 
-Voici le probl\`{e}me que nous rencontrons (probl\`{e}me cible) : <<Tu n'as pas manger>>.
-Nous avons dans notre base de cas un couple tel que celui-ci : <<Il a recommencer>> est le probl\`{e}me source et <<Il a recommenc\'{e}>> est la solution du probl\`{e}me source.
-La rem\'{e}moration va donc rapprocher notre probl\`{e}me cible du probl\`{e}me source et en utilisant la solution du probl\`{e}me source ainsi que l'explication, l'Adaptation va pouvoir nous fournir une solution de notre probl\`{e}me cible qui sera <<Tu n'as pas mang\'{e}>>.
+Voici le probl\`{e}me que nous rencontrons (probl\`{e}me cible) : <<\,Tu n'as pas manger\,>>.
+Nous avons dans notre base de cas un couple tel que celui-ci : <<\,Il a recommencer\,>> est le probl\`{e}me source et <<\,Il a recommenc\'{e}\,>> est la solution du probl\`{e}me source.
+La rem\'{e}moration va donc rapprocher notre probl\`{e}me cible du probl\`{e}me source et en utilisant la solution du probl\`{e}me source ainsi que l'explication, l'adaptation va pouvoir nous fournir une solution de notre probl\`{e}me cible qui sera <<\,Tu n'as pas mang\'{e}\,>>.
 \newline
 \newline
 Pour parvenir \`{a} r\'{e}soudre notre probl\'{e}matique qui est la correction automatique du fran\c{c}ais \`{a} l'aide du raisonnement \`{a} partir du cas, il nous faut donc une base de cas qui permette en th\'{e}orie de corriger toutes les erreurs possible du fran\c{c}ais. En prenant en compte tous les types d'erreurs possibles (grammaire, orthographe, conjugaison, etc.), il y aurait un nombre immense de cas \`{a} d\'{e}finir dans notre base, ce qui est impossible \`{a} construire \`{a} la main. Le but de notre projet est donc de construire une base de cas \`{a} l'aide d'outils diverses et vari\'{e}s qui serait totalement automatis\'{e}e.
@@ -196,28 +198,20 @@ Pour parvenir \`{a} r\'{e}soudre notre probl\'{e}matique qui est la correction a
 Nous voyons donc qu'il est possible de r\'{e}soudre des probl\`{e}mes gr\^{a}ce au raisonnement \`{a} partir de cas. Cependant, pour pouvoir les r\'{e}soudre, il est n\'{e}cessaire d'avoir des probl\`{e}mes similaires d\'{e}j\`{a} r\'{e}solus. Cet ensemble de couples (probl\`{e}me, solution) r\'{e}solus s'appelle une base de cas. En plus du couple (probl\`{e}me, solution), une explication est ajout\'{e}e et permet d'am\'{e}liorer l'\'{e}tape de la rem\'{e}moration.
 \newline
 \newline
-Voici un exemple de r\'{e}solution de probl\`{e}me gr\^{a}ce au raisonnement \`{a} partir de cas : 
-Voici le probl\`{e}me que nous rencontrons (probl\`{e}me cible) : "Tu n'as pas manger".
-Nous avons dans notre base de cas un couple tel que celui-ci : "Il a recommencer" est le probl\`{e}me source et "Il a recommenc\'{e}" est la solution du probl\`{e}me source.
-La rem\'{e}moration va donc rapprocher notre probl\`{e}me cible du probl\`{e}me source. Puis en utilisant la solution du probl\`{e}me source ainsi que l'explication, l'adaptation va pouvoir nous fournir une solution de notre probl\`{e}me cible qui sera "Tu n'as pas mang\'{e}".
-\newline
-\newline
-Pour parvenir \`{a} r\'{e}soudre notre probl\'{e}matique qui est la correction automatique du fran\c{c}ais \`{a} l'aide du raisonnement \`{a} partir du cas, il nous faut donc une base de cas qui permette en th\'{e}orie de corriger toutes les erreurs possibles du fran\c{c}ais. En prenant en compte tous les types d'erreurs possibles (grammaire, orthographe, conjugaison, etc.), il y aurait un nombre immense de cas \`{a} d\'{e}finir dans notre base, ce qui s'av\'{e}rerait long et fastidieux \`{a} construire \`{a} la main. Le but de notre projet est donc de construire une base de cas \`{a} l'aide d'outils qui permettrait une certaine automatisation du remplissage. 
-
 
 %===== 2eme sous partie ====
 \subsection{Travail existant}
 
-Une premi\`{e}re piste nous a \'{e}t\'{e} fournie par un groupe d'\'{e}tudiants de L3 de 2017-2018 compos\'{e} de M. Giang, M. Levy, M. Ly, qui avaient travaill\'{e} sur un projet intitul\'{e} Corrector. Le projet consistait \`{a} faire un site Internet capable d'apporter une correction \`{a} une phrase erron\'{e}e donn\'{e}e en entr\'{e}e. Cette correction devait se faire \`{a} l'aide d'une base de cas qui pouvait s'enrichir avec des interactions humaines (utilisateur/administrateur du site). 
+Une premi\`{e}re piste nous a \'{e}t\'{e} fournie par un groupe d'\'{e}tudiants de L3 de 2017-2018 compos\'{e} de M. Giang, M. Levy et M. Ly, qui avaient travaill\'{e} sur un projet intitul\'{e} Corrector. Le projet consistait \`{a} faire un site WEB capable d'apporter une correction \`{a} une phrase erron\'{e}e donn\'{e}e en entr\'{e}e. Cette correction devait se faire \`{a} l'aide d'une base de cas qui pouvait s'enrichir avec des interactions humaines (utilisateur/administrateur du site). 
 \newline
 \newline
-Notre d\'{e}but d'\'{e}tude a donc \'{e}t\'{e} guid\'{e} par les moyens mis en oeuvre pour effectuer un remplissage automatique de leur base de cas initiale, et plus particuli\`{e}rement un : les corpus de WiCoPaCo (Wikipedia Correction and Paraphrase Corpus). Le site WiCoPaCo met en libre acc\`{e}s des fichiers au format XML contenant des phrases, ou parties de phrases avec une correction effectu\'{e}e ainsi qu'un commentaire \'{e}ventuel laiss\'{e} par l'auteur de la correction. Ces fichiers sont le r\'{e}sultat des corrections faites par les administrateurs des pages Wikip\'{e}dia, ce qui n\'{e}cessite une correction \'{e}tant donn\'{e} que le contenu des pages est apport\'{e} par des utilisateurs. Les fichiers en question contiennent donc des centaines de milliers de cas compos\'{e}s de la mani\`{e}re suivante : le groupe de phrase avant modification avec la mise en \'{e}vidence de la faute, suivi du m\^{e}me groupe de phrase avec la correction apport\'{e}e \'{e}galement mise en \'{e}vidence. 
+Notre d\'{e}but d'\'{e}tude a donc \'{e}t\'{e} guid\'{e} par les moyens mis en {\oe}uvre pour effectuer un remplissage automatique de leur base de cas initiale, et plus particuli\`{e}rement un : les corpus de WiCoPaCo (\cite{Wikipedia Correction and Paraphrase Corpus} lien : \url{https://wicopaco.limsi.fr}). Le site WiCoPaCo met en libre acc\`{e}s des fichiers au format XML contenant des phrases, ou parties de phrases avec une correction effectu\'{e}e ainsi qu'un commentaire \'{e}ventuel laiss\'{e} par l'auteur de la correction. Ces fichiers sont le r\'{e}sultat des corrections faites par les administrateurs des pages Wikip\'{e}dia, ce qui n\'{e}cessite une correction \'{e}tant donn\'{e} que le contenu des pages est apport\'{e} par des utilisateurs. Les fichiers en question contiennent donc des centaines de milliers de cas compos\'{e}s de la mani\`{e}re suivante : le groupe de phrase avant modification avec la mise en \'{e}vidence de la faute, suivi du m\^{e}me groupe de phrase avec la correction apport\'{e}e \'{e}galement mise en \'{e}vidence. 
 \newline
 \newline
-L'int\'{e}r\^{e}t principal de ces fichiers \'{e}tant l'\'{e}norme masse de donn\'{e}es qu'ils contiennent, nous permettant ainsi d'en extraire un grand nombre de cas. Cependant, m\^{e}me si cette solution semble \^{e}tre id\'{e}ale et simple \`{a} mettre en place, il s'av\`{e}re qu'elle est loin d'\^{e}tre parfaite. Car sur ces corrections, une partie \'{e}tant des corrections de contenu, une autre \'{e}tant des reformulations, et bien d'autres types de corrections n'\'{e}tant pas des erreurs de fran\c{c}ais mais sont pourtant contenues dans ces fichiers. La probl\'{e}matique de l'\'{e}puration de cette \'{e}norme masse de donn\'{e}es se pose donc.
+L'int\'{e}r\^{e}t principal de ces fichiers \'{e}tant l'\'{e}norme masse de donn\'{e}es qu'ils contiennent, nous permettant ainsi d'en extraire un grand nombre de cas. Cependant, m\^{e}me si cette solution semble \^{e}tre id\'{e}ale et simple \`{a} mettre en place, il s'av\`{e}re qu'elle est loin d'\^{e}tre parfaite. Le probl\`{e}me de ces corrections est qu'une partie se trouve être des corrections de contenu, une autre \'{e}tant des reformulations, et bien d'autres types de corrections n'\'{e}tant pas des erreurs de fran\c{c}ais mais sont pourtant contenues dans ces fichiers. La probl\'{e}matique de l'\'{e}puration de cette \'{e}norme masse de donn\'{e}es se pose donc.
 \newline
 \newline
-Face \`{a} ce probl\`{e}me, le groupe d'\'{e}tudiants de L3 avait mis en place un script python qui prenait un fichier XML en entr\'{e}e et produisait en fichier CSV en sortie. Le script s'occupait aussi de la suppression de certains cas : les retours en arri\`{e}re. Il ne retenait donc pas les cas qui \'{e}taient des retours sur correction, c'est \`{a} dire lorsque le correcteur transformait une phrase A en phrase B, puis transformait \`{a} nouveau la phrase B en phrase A.
+Face \`{a} ce probl\`{e}me, le groupe d'\'{e}tudiants de L3 avait mis en place un script Python qui prenait un fichier XML en entr\'{e}e et produisait un fichier CSV en sortie. Le script s'occupait aussi de la suppression de certains cas : les retours en arri\`{e}re. Il ne retenait donc pas les cas qui \'{e}taient des retours sur correction, c'est-\`{a}-dire lorsque le correcteur transformait une phrase A en phrase B, puis transformait \`{a} nouveau la phrase B en phrase A.
 \newline
 \newline
 C'est donc en reprenant cette base de travail que nous avons d\'{e}but\'{e} notre projet, dans l'optique de pouvoir \'{e}purer cette \'{e}norme masse de donn\'{e}es \`{a} l'aide de filtres pour obtenir uniquement des cas de corrections de langue.
@@ -227,13 +221,13 @@ C'est donc en reprenant cette base de travail que nous avons d\'{e}but\'{e} notr
 
 %===== 3eme sous partie ====
 \subsection{Mise en place du projet}
-Pour mettre en place notre projet, nous avons donc grandement utilis\'{e} le travail d\'{e}j\`{a} effectu\'{e} par nos coll\`{e}gues qui nous ont pr\'{e}c\'{e}d\'{e}s. Nous avons d\'{e}cid\'{e} d'utiliser l'\'{e}norme quantit\'{e} de cas que nous fournissait les fichiers XML de WiCoPaCo pour cr\'{e}er notre base de cas automatiques. Ces fichiers regroupant plus de 200 000 cas, elle serait suffisamment cons\'{e}quente pour couvrir un maximum d'erreur de fran\c{c}ais. N\'{e}anmoins, comme cela a \'{e}t\'{e} expliqu\'{e} ci-dessus, nous ne pouvons pas seulement transformer ces fichiers directement en une base de cas car un grand nombre de cas n'est pas exploitable. Nous devons donc reprendre le travail qui a \'{e}t\'{e} fait en amont et continuer \`{a} filtrer les cas jusqu'\`{a} obtenir un ensemble de cas corrects.
+Pour mettre en place notre projet, nous avons donc grandement utilis\'{e} le travail d\'{e}j\`{a} effectu\'{e} par nos coll\`{e}gues qui nous ont pr\'{e}c\'{e}d\'{e}s. Nous avons d\'{e}cid\'{e} d'utiliser l'\'{e}norme quantit\'{e} de cas que nous fournissait les fichiers XML de WiCoPaCo pour cr\'{e}er notre base de cas. Ces fichiers regroupant plus de 400 000 cas, elle serait suffisamment cons\'{e}quente pour couvrir un grand nombre d'erreurs de fran\c{c}ais. N\'{e}anmoins, comme cela a \'{e}t\'{e} expliqu\'{e} ci-dessus, nous ne pouvons pas seulement transformer ces fichiers directement en une base de cas car un grand nombre de cas n'est pas exploitable. Nous devons donc reprendre le travail qui a \'{e}t\'{e} fait en amont et continuer \`{a} filtrer les cas jusqu'\`{a} obtenir un ensemble de cas corrects.
 \newline
 \newline
-\`{a} la suite d'une r\'{e}flexion sur le d\'{e}veloppement de notre projet, nous avons d\'{e}cid\'{e} de ne pas reprendre les travaux effectu\'{e}s par les \'{e}tudiants pr\'{e}c\'{e}dent pour plusieurs raisons : premi\`{e}rement, bien que nous comprenions l'id\'{e}e directrice du d\'{e}veloppement, nous n'avions pas toutes les subtilit\'{e}s pour comprendre parfaitement le code. De plus, nous avions dans l'optique d'impl\'{e}menter plusieurs filtres afin de rendre la cr\'{e}ation de ceux-ci plus facile. Nous nous sommes donc r\'{e}solus \`{a} utiliser le langage orient\'{e} objet Java pour le d\'{e}veloppement de notre application. C'est un langage que nous avons eu l'habitude d'utiliser au cours de nos \'{e}tudes. Il permet de lire et d'\'{e}crire des fichiers ais\'{e}ment et permet, une fois le projet structur\'{e}, une impl\'{e}mentation simple et rapide de nouvelles fonctionnalit\'{e}s.
+\`{A} la suite d'une r\'{e}flexion sur le d\'{e}veloppement de notre projet, nous avons d\'{e}cid\'{e} de ne pas reprendre les travaux effectu\'{e}s par les \'{e}tudiants pr\'{e}c\'{e}dent pour plusieurs raisons : premi\`{e}rement, bien que nous comprenions l'id\'{e}e directrice du d\'{e}veloppement, nous n'avions pas toutes les subtilit\'{e}s pour comprendre parfaitement le code. De plus, nous avions dans l'optique d'impl\'{e}menter plusieurs filtres afin de rendre la cr\'{e}ation de ceux-ci plus facile. Nous nous sommes donc r\'{e}solus \`{a} utiliser le langage orient\'{e} objet Java pour le d\'{e}veloppement de notre application. C'est un langage que nous avons eu l'habitude d'utiliser au cours de nos \'{e}tudes. Il permet de lire et d'\'{e}crire des fichiers ais\'{e}ment et permet, une fois le projet structur\'{e}, une impl\'{e}mentation simple et rapide de nouvelles fonctionnalit\'{e}s.
 \newline
 \newline
-Cependant, notre projet consistant \`{a} trouver la correction d'une phrase de fran\c{c}ais en utilisant une base de cas, nous n'avons par cons\'{e}quent pas acc\`{e}s \`{a} un analyseur syntaxique ou orthographique pour pouvoir d\'{e}tecter si une phrase contient des erreurs. Nos encadrants nous ont demand\'{e} de r\'{e}fl\'{e}chir \`{a} une m\'{e}thode permettant d'accomplir cette d\'{e}tection.
+Cependant, notre projet consistant \`{a} trouver la correction d'une phrase de fran\c{c}ais en utilisant une base de cas, nous n'avons par cons\'{e}quent pas acc\`{e}s \`{a} un analyseur syntaxique ou orthographique pour pouvoir d\'{e}tecter si une phrase contient des erreurs. Nos encadrants nous ont demand\'{e} de r\'{e}fl\'{e}chir \`{a} une m\'{e}thode permettant d'effectuer cette d\'{e}tection.
 
 
 %===== 2eme partie ====
@@ -245,14 +239,14 @@ Suite \`{a} la mise en place de notre sujet, nous nous sommes donc concentr\'{e}
 
 %===== 1ere sous sous partie ====
 \subsubsection{Grew}
-Le premier de nos deux axes \'{e}tait la d\'{e}couverte d'un outil permettant l'analyse des phrases pour en trouver les potentielles fautes de fran\c{c}ais. Pour cela, nos encadrants nous ont orient\'{e}s vers GREW, un logiciel dont un de nos encadrants, Bruno Guillaume, conna\^{i}t bien le fonctionnement. Ce logiciel permet, \`{a} partir d'une ou plusieurs phrases donn\'{e}es en param\`{e}tres, de construire un graphe \`{a} partir des lemmes de chaque mot ainsi que gr\^{a}ce au contexte des phrases. Ce graphe permet de d\'{e}duire les liens que chaque mot entretient avec les autres mots de la phrase. Voici un exemple de graphe que cr\'{e}e l'outil GREW \`{a} partir de la phrase "C'est une femme tr\`{e}s intelligente."
+Le premier de nos deux axes \'{e}tait la d\'{e}couverte d'un outil permettant l'analyse des phrases pour en trouver les potentielles fautes de fran\c{c}ais. Pour cela, nos encadrants nous ont orient\'{e}s vers GREW (\url{http://grew.fr}), un logiciel dont un de nos encadrants, Bruno Guillaume, conna\^{i}t bien le fonctionnement. Ce logiciel permet, \`{a} partir d'une ou plusieurs phrases donn\'{e}es en param\`{e}tres, de construire un graphe \`{a} partir des lemmes de chaque mot ainsi que gr\^{a}ce au contexte des phrases. Ce graphe permet de d\'{e}duire les liens que chaque mot entretient avec les autres mots de la phrase. Voici un exemple de graphe que cr\'{e}e l'outil GREW \`{a} partir de la phrase <<\,C'est une femme tr\`{e}s intelligente.\,>>
 
 %==== image ====
 \begin{center}
 \includegraphics[width=10cm]{graphgrew.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Nous pouvons donc retrouver dans ce graphe le lemme de chaque mot, situ\'{e} sous le mot correspondant ainsi que les liens qu'il a avec les autres, repr\'{e}sent\'{e}s par des fl\`{e}ches qui lie les mots entre eux. Cet outil n'est donc pas un outil de d\'{e}tection d'erreur \`{a} proprement parl\'{e}. Cependant il permet, si une phrase n'est pas bien assembl\'{e} ou dans les cas o\`{u} il n'arrive pas \`{a} trouver les liens entre les mots d'une phrase, de cr\'{e}er des graphes o\`{u} tous les mots ne sont pas li\'{e}s entre eux. Prenons par exemple la phrase utilis\'{e}e dans le graphe pr\'{e}c\'{e}dent et remplaçons Le "C'est" par "S'est", ce qui est une erreur classique de français. Dans ce cas, GREW r\'{e}alise le graphe suivant :
+Nous pouvons donc retrouver dans ce graphe le lemme de chaque mot, situ\'{e} sous le mot correspondant ainsi que les liens qu'il a avec les autres, repr\'{e}sent\'{e}s par des fl\`{e}ches qui lient les mots entre eux. Cet outil n'est donc pas un outil de d\'{e}tection d'erreur \`{a} proprement parl\'{e}. Cependant il permet, si une phrase n'est pas bien assembl\'{e} ou dans les cas o\`{u} il n'arrive pas \`{a} trouver les liens entre les mots d'une phrase, de cr\'{e}er des graphes o\`{u} tous les mots ne sont pas li\'{e}s entre eux. Prenons par exemple la phrase utilis\'{e}e dans le graphe pr\'{e}c\'{e}dent et rempla\c{c}ons Le "C'est" par "S'est", ce qui est une erreur classique de fran\c{c}ais. Dans ce cas, GREW r\'{e}alise le graphe suivant :
 
 %==== image ====
 \begin{center}
@@ -262,31 +256,31 @@ Nous pouvons donc retrouver dans ce graphe le lemme de chaque mot, situ\'{e} sou
 Nous voyons ici que GREW n'a pas r\'{e}ussi \`{a} lier le 'S' avec les autres mots. Nous dirons par la suite qu'un graphe dans lequel un ou plusieurs mots ne sont li\'{e}s \`{a} aucun autre est un graphe qui repr\'{e}sente une qui comporte une ou plusieurs erreurs de fran\c{c}ais. Notre objectif est donc d'observer  les r\'{e}sultats de GREW sur des exemples multiples et vari\'{e}s, et d'analyser ses performances.
 \newline
 \newline
-Tout d'abord, nous avons donc d\^{u} installer GREW, ce qui fut complexe aux vu des d\'{e}pendances de ce dernier. L'installation nous a permis d'utiliser l'outil en ligne de commande, puis par l'interm\'{e}diaire d'un script BASH, qui nous a permis d'automatiser son utilisation. L'objectif de ce script \'{e}tait de faire analyser un grand nombre de phrases par GREW, correct ou incorrect, et de v\'{e}rifier par le biais de fichier de sortie, le pourcentage de phrases bien analys\'{e}es par celui-ci. Pour se faire, nous avons regroup\'{e} les cas du fichier XML de WiCoPaCo dans un fichier CSV. Ces cas \'{e}taient repr\'{e}sent\'{e}s comme sur la photo ci-dessous :
+Tout d'abord, nous avons d\^{u} installer GREW, ce qui fut complexe aux vu des d\'{e}pendances de ce dernier. L'installation nous a permis d'utiliser l'outil en ligne de commande, puis par l'interm\'{e}diaire d'un script BASH, qui nous a permis d'automatiser son utilisation. L'objectif de ce script \'{e}tait de faire analyser un grand nombre de phrases par GREW, correctes ou incorrectes, et de v\'{e}rifier par le biais de fichier de sortie, le pourcentage de phrases bien analys\'{e}es par celui-ci. Pour se faire, nous avons regroup\'{e} les cas du fichier XML de WiCoPaCo dans un fichier CSV. Ces cas \'{e}taient repr\'{e}sent\'{e}s comme sur la capture d'\'{e}cran ci-dessous :
 
 %==== image ====
 \begin{center}
 \includegraphics[width=10cm]{exemple1.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Chaque cas est compos\'{e} de 3 \'{e}l\'{e}ments : une phrase fausse, une phrase corrig\'{e}e, ainsi qu'un commentaire expliquant la nature de la correction. Sur cette image, la premi\`{e}re ligne correspond \`{a} la phrase avec erreur, la seconde correspond \`{a} la phrase corrig\'{e}e et la derni\`{e}re au commentaire.
+Chaque cas est compos\'{e} de 3 \'{e}l\'{e}ments : une phrase fausse, une phrase corrig\'{e}e, ainsi qu'un commentaire expliquant la nature de la correction. Sur cette image, la premi\`{e}re ligne correspond \`{a} la phrase avec erreur, la deuxi\`{e}me correspond \`{a} la phrase corrig\'{e}e et la derni\`{e}re au commentaire.
 \newline
 \newline
-De plus, une \'{e}tudiante de l'\'{e}cole T\'{e}l\'{e}com Saint-\'{e}tienne, Mme Isabelle Mornard, est venue effectuer un stage au sein du Loria, sous l'encadrement de M. Jean Lieber. Son objectif en tant que stagiaire \'{e}tait de nous aider \`{a} comprendre les diff\'{e}rentes erreurs possibles de la langue fran\c{c}aise ainsi que de les cat\'{e}goriser. En plus de cela, un de ses objectifs \'{e}tait de cr\'{e}er \`{a} la main une base de cas d'environ 200 cas regroupant des erreurs de chaque cat\'{e}gories. La base de cas a \'{e}t\'{e} remplie dans un fichier Python et chaque cas \'{e}tait repr\'{e}sent\'{e} comme ci-dessous :
+De plus, une \'{e}tudiante de l'\'{e}cole T\'{e}l\'{e}com Saint-\'{e}tienne, Mme Isabelle Mornard, est venue effectuer un stage au sein du Loria, sous l'encadrement de M. Guillaume, M. Lepage, M. Lieber et M. Nauer. Son objectif en tant que stagiaire \'{e}tait de nous aider \`{a} comprendre les diff\'{e}rentes erreurs possibles de la langue fran\c{c}aise ainsi que de les cat\'{e}goriser. En plus de cela, un de ses objectifs \'{e}tait de cr\'{e}er \`{a} la main une base de cas d'environ 200 cas regroupant des erreurs de chaque cat\'{e}gories. La base de cas a \'{e}t\'{e} remplie dans un fichier Python et chaque cas \'{e}tait repr\'{e}sent\'{e} comme ci-dessous :
 
 %==== image ====
 \begin{center}
 \includegraphics[width=14cm]{exemple2.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Un cas dans ce fichier est repr\'{e}sent\'{e} par 3 ou 4 lignes : la premi\`{e}re est une phrase avec une erreur, la seconde est une phrase correcte, la troisi\`{e}me est l'explication de la correction et la derni\`{e}re ligne est la provenance de l'exemple. La provenance est souvent est un site web de correction de fran\c{c}ais. Nous avons donc utilis\'{e} notre script sur la base de cas d'Isabelle ainsi que sur notre base de cas pour tester l'outil GREW. Les fichiers r\'{e}sultants de ces tests nous ont permis de mieux comprendre son fonctionnement ainsi que ses limites.
+Un cas dans ce fichier est repr\'{e}sent\'{e} par 3 ou 4 lignes : la premi\`{e}re est une phrase avec une erreur, la deuxi\`{e}me est une phrase correcte, la troisi\`{e}me est l'explication de la correction et la derni\`{e}re ligne est la provenance de l'exemple. La provenance est souvent un site web de correction de fran\c{c}ais. Nous avons donc utilis\'{e} notre script sur la base de cas d'Isabelle ainsi que sur notre base de cas pour tester l'outil GREW. Les fichiers r\'{e}sultants de ces tests nous ont permis de mieux comprendre son fonctionnement ainsi que ses limites.
 
 %==== image ====
 \begin{center}
 \includegraphics[width=14cm]{exemple3.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Les r\'{e}sultats que nous analysons dans les fichiers de sorties nous montrent que dans les cas contenant une erreur, le logiciel GREW d\'{e}tecte cette erreur une fois sur deux. Cependant, ces r\'{e}sultats nous montrent aussi que le logiciel d\'{e}tecte une erreur 40 \% du temps sur des cas ne comportant pas d'erreur. N\'{e}anmoins, nous avons r\'{e}ussi \`{a} trouver des sch\'{e}mas de phrase qui se r\'{e}p\`{e}te et pour lesquelles le logiciel ne marche pas correctement. Par exemple, tous les cas comportant des caract\`{e}res sp\'{e}ciaux tel que des accolades, des parenth\`{e}ses, des tirets, des point-virgule, des points d'interrogation, etc. sont des cas dont GREW n'arrive pas \`{a} cr\'{e}er un graphe complet correspondant et donc est consid\'{e}r\'{e} comme un cas contenant une faute m\^{e}me si ce n'est pas toujours le cas. A contrario, les cas contenant des erreurs de conjugaisons sont des cas ou un graphe complet est parfois cr\'{e}er et donc consid\'{e}r\'{e} comme sans faute. Nous pouvons donc en conclure que le logiciel GREW n'est pas infaillible quant \`{a} la d\'{e}tection d'erreur mais que des am\'{e}liorations peuvent \^{e}tre effectu\'{e} sur les cas pour pouvoir obtenir de meilleurs r\'{e}sultats.
+Les r\'{e}sultats que nous analysons dans les fichiers de sorties nous montrent que dans les cas contenant une erreur, le logiciel GREW d\'{e}tecte cette erreur une fois sur deux. Cependant, ces r\'{e}sultats nous montrent aussi que le logiciel d\'{e}tecte une erreur 40 \% du temps sur des cas ne comportant pas d'erreur. N\'{e}anmoins, nous avons r\'{e}ussi \`{a} trouver des sch\'{e}mas de phrase qui se r\'{e}p\`{e}tent et pour lesquelles le logiciel ne marche pas correctement. Par exemple, tous les cas comportant des caract\`{e}res sp\'{e}ciaux tel que des accolades, des parenth\`{e}ses, des tirets, des point-virgule, des points d'interrogation, etc. sont des cas pour lesquels GREW n'arrive pas \`{a} cr\'{e}er un graphe complet correspondant et donc est consid\'{e}r\'{e} comme un cas contenant une faute m\^{e}me si ce n'est pas toujours le cas. A contrario, les cas contenant des erreurs de conjugaisons sont des cas o\`{u} un graphe complet est parfois cr\'{e}\'{e} et donc consid\'{e}r\'{e} comme sans faute. Nous pouvons donc en conclure que le logiciel GREW n'est pas infaillible quant \`{a} la d\'{e}tection d'erreur mais que des am\'{e}liorations peuvent \^{e}tre effectu\'{e}es sur les cas pour pouvoir obtenir de meilleurs r\'{e}sultats.
 
 
 %===== 2eme sous sous partie ====
@@ -403,8 +397,11 @@ Le second filtre de cette cat\'{e}gorie se nomme "SpellingErrorLabel", ce dernie
 \subsubsection{Le type LocalRejector}
 Quand au type "LocalRejector", c'est une cat\'{e}gorie comprenant des filtres qui inspecte uniquement le cas et son contenu pour d\'{e}cider si le cas est rejet\'{e}. 
 	Deux filtres ont \'{e}t\'{e} impl\'{e}ment\'{e} dans cette cat\'{e}gorie:
-Le premier porte le nom de "EstheticalRestructurationRejector" et a pour but de d\'{e}tecter les reformulations ou restructuration de phrases. Pour ce faire, notre filtre utilise la distance d'\'{e}dition de Levenshtein. Un cas est rejet\'{e} si la partie "correction effectu\'{e}e" a un nombre de caract\`{e}res inf\'{e}rieur \`{a} 4 et que la distance de Levenshtein est plus grande que la moiti\'{e} du mot le plus court, ou si la partie correction a un nombre de caract\`{e}res sup\'{e}rieur \`{a} 4 et que la distance calcul\'{e}e est plus grande que la moiti\'{e} de la plus petites partie modification.
+Le premier porte le nom de "EstheticalRestructurationRejector" et a pour but de d\'{e}tecter les reformulations ou restructuration de phrases. Pour ce faire, notre filtre utilise la distance d'\'{e}dition de Levenshtein, qui au sens math\'{e}matique du terme, est une distance donnant une mesure de la diff\'{e}rence entre deux chaînes de caract\`{e}res. Elle est \'{e}gale au nombre minimal de caract\`{e}res qu'il faut supprimer, ins\'{e}rer ou remplacer pour passer d'une chaîne \`{a} l'autre. C'est pourquoi si cette distance est importante par rapport \`{a} la taille des mots modifi\'{e}s, nous pouvons consid\'{e}rer que le mot entier a \'{e}t\'{e} chang\'{e} et que ce n'\'{e}tait pas une simple correction orthographique. 
+\newline
+Notre filtre a \'{e}t\'{e} impl\'{e}ment\'{e} de la mani\`{e}re suivante: un cas est rejet\'{e} si la partie "correction effectu\'{e}e" a un nombre de caract\`{e}res inf\'{e}rieur \`{a} 4 et que la distance de Levenshtein est plus grande que la moiti\'{e} du mot le plus court, ou si la partie correction a un nombre de caract\`{e}res sup\'{e}rieur \`{a} 4 et que la distance calcul\'{e}e est plus grande que la moiti\'{e} de la plus petites partie modification.
 Voici un exemple que le EstheticalRestructurationRejector rejette :
+
 %==== image ====
 \begin{center}
 \includegraphics[width=12cm]{exemple12.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
@@ -418,10 +415,11 @@ Voici un exemple que le NumberRejector rejette :
 
 %===== 3eme sous sous partie ====
 \subsubsection{Le type Purifier}
-Enfin la derni\`{e}re cat\'{e}gorie de filtre: "PurifierFilter". Cette cat\'{e}gorie est diff\'{e}rente des pr\'{e}c\'{e}dentes car son but n'\'{e}tant pas d'accepter ou de rejeter un cas, mais d'\'{e}liminer le contenu inutile que comporte certains cas. Ce type de filtre travaille \`{a} l'\'{e}chelle du cas, et se cantonne \`{a} \'{e}liminer des caract\`{e}res.
-	Cette cat\'{e}gorie contient deux filtres:
-Le filtre "SentencePurifier" a pour mission de supprimer tout le contenu superflu autour de la correction, et de n'en garder que le noyau. Le probl\`{e}me \'{e}tant que les cas contenus dans le fichier de WiCoPaCo sont souvent entour\'{e}s du contexte, ce qui n'est pas important pour l'utilisation que nous voulons en faire. C'est pourquoi nous avons d\'{e}cid\'{e} de supprimer le contexte, dans l'optique d'all\'{e}ger le fichier de sortie
+En plus de ces deux filtres, nous avons ajout\'{e} une autre cat\'{e}gorie, "PurifierFilter", qui n'est pas un filtre en soit car il rejette aucun cas. Ce "purificateur" a deux principaux objectifs: premi\`{e}rement, il sert a "\'{e}pur\'{e}" les cas qui seront retenu par les filtres pr\'{e}c\'{e}dent. Cette \'{e}puration permettra d'all\'{e}ger les donn\'{e}es pr\'{e}sent dans la base de cas mais surtout d'am\'{e}liorer les \'{e}tapes de rem\'{e}moration ainsi que d'adaptation en enlevant des caract\`{e}res inutiles. De plus, nous avons vu pr\'{e}c\'{e}demment dans l'utilisation du logiciel GREW que celui-ci n'arrivait pas \`{a} construire de graphe complet lorsque la cas \'{e}tudi\'{e} comportait des caract\`{e}res sp\'{e}ciaux. Cette \'{e}puration permettra aussi d'am\'{e}liorer la qualit\'{e} d'analyse de GREW pour la d\'{e}tection d'erreurs.
+
+Dans cette cat\'{e}gorie, nous retrouvons deux filtres. Le premier filtre, "SentencePurifier" a pour mission de supprimer tout le contenu superflu autour de la correction, et de n'en garder que le noyau. Le probl\`{e}me \'{e}tant que les cas contenus dans le fichier de WiCoPaCo sont souvent entour\'{e}s du contexte, qui n'est pas important pour l'utilisation que nous voulons en faire. C'est pourquoi nous avons d\'{e}cid\'{e} de supprimer le contexte, dans l'optique d'all\'{e}ger le fichier de sortie
 Par exemple le cas : 
+
 %==== image ====
 \begin{center}
 \includegraphics[width=14cm]{exemple14.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
